--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,12 @@
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
+  
+  <!-- HTML elements for search -->
+<input type="text" id="search-input" placeholder="Search ...">
+<ul id="results-container"></ul>
+<!-- jekyll simple search -->
+<script src="https://cdn.rawgit.com/christian-fei/Simple-Jekyll-Search/master/dest/simple-jekyll-search.min.js"></script>
 
   <body>
     <div class="wrapper-masthead">
