--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,23 @@
     <script src="https://cdn.rawgit.com/christian-fei/Simple-Jekyll-Search/master/dest/simple-jekyll-search.min.js"></script>
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    <style type="text/css">
+      #search-demo-container {
+        max-width: 40em;
+        padding: 1em;
+        margin: 1em auto;
+        border: 1px solid lightgrey;
+      }
+      #search-input {
+        display: inline-block;
+        padding: .5em;
+        width: 100%;
+        font-size: 0.8em;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+    </style>
     
   </head>
   
@@ -54,12 +71,8 @@
         <footer class="footer">
           {% include svg-icons.html %}
         </footer>
-      </div>
-    </div>
-
-    {% include analytics.html %}
-    
-    <script type="text/javascript">
+        
+         <script type="text/javascript">
       SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
         resultsContainer: document.getElementById('results-container'),
@@ -71,6 +84,11 @@
         exclude: ['Welcome']
       })
     </script>
+        
+      </div>
+    </div>
+
+    {% include analytics.html %}
     
   </body>
 </html>
